src/tests/fixtures/resolver_context/ContextValueTypedAsLiteral.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(args: unknown, ctx: { greeting: string }): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueTypedAsLiteral.invalid.ts:4:32 - error: Expected context parameter's type to be a type reference. Grats validates that your context parameter is type-safe by checking that all context values reference the same type declaration.

4   greeting(args: unknown, ctx: { greeting: string }): string {
                                 ~~~~~~~~~~~~~~~~~~~~
